--- a/planning/personal-site-plan.css
+++ b/planning/personal-site-plan.css
@@ -5,9 +5,9 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #000501;
+  --secondary-color: #5C996E;
+  --accent1-color: #99D19C;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
