--- a/planning/personal-site-plan.css
+++ b/planning/personal-site-plan.css
@@ -11,13 +11,13 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: font-family: "Nanum Gothic Coding", monospace;
+  --paragraph-font: "Rubik Mono One", monospace;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #000501;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #5C996E; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #2E4F38; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #5C996E  ;
   --nav-link-color: #5C996E;
