--- a/personal-site-plan.css
+++ b/personal-site-plan.css
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: font-family: "Nanum Gothic Coding", monospace;
-  --paragraph-font: "Rubik Mono One", monospace;
+  --heading-font: font-family: "Victor Mono", monospace;
+  --paragraph-font: font-family: "Cutive Mono", monospace;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #000501;  /* headlines on a white background */ 
