--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,6 @@
 header {
-    background-color: #5C996E
-    
+    background-color: #5C996E;
+    text-emphasis-color: white;
 }
 .logo-img{
     padding: 5px;
@@ -11,7 +11,10 @@ nav{
     padding: 15px;
     font-size: x-large;
 }
-
+nav a:hover {
+    background-color: white;
+    padding: 10px;
+}
 h1{
     padding-left: 35%;
     font-size: xx-large;
