--- a/styles/home.css
+++ b/styles/home.css
@@ -5,9 +5,12 @@ header {
 .logo-img{
     padding: 5px;
 }
+a{
+    color: beige;
+}
 nav{
     text-align: center;
-    text-emphasis-color: #000501;
+    text-emphasis-color: white;
     padding: 15px;
     font-size: x-large;
 }
