--- a/styles/fields.css
+++ b/styles/fields.css
@@ -13,6 +13,7 @@ nav{
     text-emphasis-color: white;
     padding: 15px;
     font-size: x-large;
+    font-family: "Victor Mono", monospace;
 }
 nav a:hover {
     background-color: lightslategray;
@@ -22,11 +23,15 @@ nav a:hover {
 h1{
     padding-left: 35%;
     font-size: xx-large;
+    font-family: "Victor Mono", monospace;
 }
 p{
     width: 900px;
     font-size: large;
     padding-left: 30%;
+    font-family: "Cutive Mono", monospace;
+    font-weight: 400;
+
 }
 
 footer{
